src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>KS_Bloqueo_de_clases_de_facturas__c</fullName>
        <label>Bloqueo de clases de facturas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Bloqueo_de_factura_para_cliente</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Bloqueo_de_nota_de_entrega__c</fullName>
        <label>Bloqueo de nota de entrega</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Bloqueo_de_entrega_para_cliente</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Canal_de_distribucion__c</fullName>
        <label>Canal de distribución</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Canal_de_distribucion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Clase_de_documento_de_ventas__c</fullName>
        <label>Clase de documento de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clase_de_documento_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Clase_de_pedido_de_cliente__c</fullName>
        <label>Clase de pedido de cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clase_de_pedido_de_cliente</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Comisionista__c</fullName>
        <label>Comisionista</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Condicion_de_expedicion__c</fullName>
        <label>Condición de expedición</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Condicion_de_expedicion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Dest_Factura__c</fullName>
        <label>Dest. Factura</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Destinatario__c</fullName>
        <label>Destinatario</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Documento_de_ventas__c</fullName>
        <description>VBELN</description>
        <label>Documento de ventas</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Estado_de_pedido</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_creacion_registro_en_SAP__c</fullName>
        <label>Fecha creación registro en SAP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_del_pedido_de_compras_cliente__c</fullName>
        <description>BSTDK</description>
        <label>Fecha del pedido de compras cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_preferente_de_entrega__c</fullName>
        <description>VDATU</description>
        <label>Fecha preferente de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Grupo_de_vendedores__c</fullName>
        <description>VKGRP</description>
        <label>Grupo de vendedores</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Grupo_de_vendedores</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Hora_del_dia__c</fullName>
        <label>Hora del día</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Hora_registrada__c</fullName>
        <label>Hora registrada</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Motivo_de_pedido__c</fullName>
        <label>Motivo de pedido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Motivo_de_pedido</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Nombre_de_usuario__c</fullName>
        <description>ZZBNAME</description>
        <label>Nombre de usuario</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_del_responsable__c</fullName>
        <label>Nombre del responsable</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Numero_Pedido__c</fullName>
        <externalId>true</externalId>
        <label>Número Pedido</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Numero_de_pedido_del_cliente__c</fullName>
        <description>BSTNK</description>
        <externalId>true</externalId>
        <label>Número de pedido del cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Numero_de_ticket_Attend__c</fullName>
        <description>ZZNTCKT</description>
        <label>Número de ticket Attend</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Oficina_de_ventas__c</fullName>
        <description>VKBUR</description>
        <label>Oficina de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Oficinas_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Organizacion_de_ventas__c</fullName>
        <description>VKORG</description>
        <label>Organización de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Resp_Pago__c</fullName>
        <label>Resp. Pago</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_Sector</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Valor_neto_del_pedido__c</fullName>
        <label>Valor neto del pedido</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Vendedor__c</fullName>
        <label>Vendedor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ks_Obra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obra</label>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>Pedidos</relationshipLabel>
        <relationshipName>Pedidos</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>